kube-manifests/ClusterIP-service.yml
apiVersion: v1
kind: Service
metadata:
  name: stroke-service
  labels:
    app: aks-stroke-app
spec:
  type: ClusterIP
  selector:
    app: aks-stroke-app
  ports:
    - name: http
      port: 80
      targetPort: 8000
